Создано с помощью Colaboratory

--- a/SciComp2021_HW1.ipynb
+++ b/SciComp2021_HW1.ipynb
@@ -74,8 +74,7 @@
       "source": [
         "Task 1 \n",
         "\n",
-        "1) 20 times\n",
-        "0.75 % of parallelization, speedup = 1/(1-0.75) = 4\n",
+        "1) The maximun  speedup, that could be achieved is 4 times, due to Amdahl's law. We have 0.75 part of code that can be parallelized, so the speedup = $\\frac{1}{1-0.75} = 4$\n",
         "\n",
         "2) speedup = $\\frac{1}{(\\alpha + \\frac{1 - \\alpha}{p})}$\n",
         "\n",
@@ -88,66 +87,8 @@
         "efficacy = 2/3\n",
         "\n",
         "Task 2 \n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AuisnTcflu0d"
-      },
-      "source": [
-        "import glob\n",
         "\n",
-        "# 1. list all text files in the directory\n",
-        "rel_filepaths = glob.glob(\"*.txt\")\n",
-        "\n",
-        "# 2. (optional) create a function to read the number of rows in a file\n",
-        "def count_rows_one(filepath):\n",
-        "  res = 0\n",
-        "  f = open(filepath, 'r')\n",
-        "  res = len(f.readlines())\n",
-        "  f.close()\n",
-        "\n",
-        "  return res\n",
-        "\n",
-        "def count_rows(filepaths):\n",
-        "  res = 0\n",
-        "  ress = []\n",
-        "  for filepath in filepaths:\n",
-        "    f = open(filepath, 'r')\n",
-        "    res = len(f.readlines())\n",
-        "    ress.append(res)\n",
-        "    f.close()\n",
-        "\n"
-      ],
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E_QLru31Bh7V",
-        "outputId": "9e79fbd7-68fb-4a9c-b6c2-4538107d1d9d"
-      },
-      "source": [
-        "len(rel_filepaths)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
+        "See the solution in the file prog.py. The program can be executed by the command `mpirun -n <N> python prog.py`, where `<N>` - is the number of processes "
       ]
     },
     {
@@ -206,6 +147,25 @@
             "Max size: 67\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uDLNEBYD47fQ"
+      },
+      "source": [
+        "**Task 3**\n",
+        "\n",
+        "Here is the fuction, that solves the third program. The main idea of the program is: if we calculate all unique prefixis of all suffixies of the string, we will find the amount of substrings. So we calculate the suffix array of the input string, then count the overlap of neighboring suffixies(LCP). Each suffix can have L prefixes (L = $length(suffix_i)$), but it has LCP[i] common prefixies with previous one. So we just have to sum lengths of all suffixies and subtract the LCP values(intersactions). \n",
+        "\n",
+        "Constracting Suffix Array: $O(N\\log^2(N))$\n",
+        "\n",
+        "Calculating LCP: $O(N\\log(N))$\n",
+        "\n",
+        "Summation: O(N)\n",
+        "\n",
+        "As the complexity of the algotythm is determined by its longest part, the total complexity of my code will be $O(N\\log^2(N))$, where N - is the number of a string. If we have M strings, the total comlexity will be $O(M*N\\log^2(N))$"
       ]
     },
     {
@@ -281,6 +241,8 @@
         "    SA, _, _, R = getSA(A)\n",
         "    LCP = getLCP(SA, R)\n",
         "    return int(N*(N-1)/2 - sum(LCP) )\n",
+        "\n",
+        "\n",
         "def main():\n",
         "  n = int(input())\n",
         "  for i in range(n):\n",
@@ -308,145 +270,79 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-82lTa6O2KHz"
+      },
+      "source": [
+        "\n",
+        "**Task 5**\n",
+        "\n",
+        "Let's calculate the probability of such an event:\n",
+        "\n",
+        "$P(\\min|\\xi_i - \\zeta_j| < r; i = \\overline{1,n}; j = \\overline{1,n}) = 1 - P(\\min|\\xi_i -\\zeta_j| \\geq r) = [|\\xi_i - \\zeta_j| = \\phi_k; k = \\overline{1, N = \\frac{n(n-1)}{2}}] = 1 - P(min (\\phi_k) \\geq r) = 1 -  \\prod_{k=1}^{N} P(\\phi_k \\geq r) = 1 - (1 - P(\\phi_k < r ))^N = [P(\\phi_k < r ) = \\Phi(r)] = 1 - (1 - \\Phi(r)))^N $\n",
+        "\n",
+        "Now let's estimate $\\Phi(r)$ using the geometry probability. \n",
+        "\n",
+        "$|\\xi_i - \\zeta_j| < x $\n",
+        "\n",
+        "$ - x <\\xi_i - \\zeta_j < x$\n",
+        "\n",
+        "$ - x + \\zeta_j<\\xi_i  < x + \\zeta_j$\n",
+        "\n",
+        "As we know that $\\zeta_j, \\xi_i$ lie in thhe interval [0,1], we can estimate the $\\Phi(x)$ as a square of intersation of a unit quadrate and lines  $\\xi_i = - x + \\zeta_j; \\xi_i= x + \\zeta_j$. It will be:\n",
+        "\n",
+        "\n",
+        "\\begin{equation*}\n",
+        " \\Phi(x) =\n",
+        " \\begin{cases}\n",
+        "   0, x \\leq 0  \n",
+        "   \\\\\n",
+        "   1 - \\frac{2*(1-x)^2}{2} = 2x - x^2 , 0 < x < 1\n",
+        "   \\\\\n",
+        "   1, x \\geq 1\n",
+        " \\end{cases}\n",
+        "\\end{equation*}\n",
+        "\n",
+        "add it to our previous results: \n",
+        "$1 - (1 - \\Phi(r)))^N = 1 - (1 - 2r + r^2)^N = 1 - (1 - r)^{2N} = 1 - (1 - 10^{-5})^{10^6} = [python] \\approx 0.9999546023401903  $ \n",
+        "\n",
+        "And that is actually what we see in our simmulation, so everything is okey with the generator. \n",
+        "\n",
+        "\n",
+        "ADD A PICTURE \n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SW9AwVZKCb_R",
-        "outputId": "aa23eaec-c31c-4f63-e3be-0b246bb66a65"
+        "id": "vvkEfcIw2Oqf",
+        "outputId": "e7f78c01-d713-467e-8afb-cac26fb4dd74"
       },
       "source": [
-        "getNumString('CCCCC$')"
+        "1 - (1-10**(-5))**(1000*1000)\n"
       ],
-      "execution_count": 38,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "11"
+              "0.9999546023401903"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BlLQSF9UC89x"
-      },
-      "source": [
-        "A = 'CCCCC$'\n",
-        "N = len(A)"
-      ],
-      "execution_count": 34,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ov2Z7aJ0EGJC"
-      },
-      "source": [
-        "SA, _, _, R = getSA(A)\n",
-        "LCP = getLCP(SA, R)\n"
-      ],
-      "execution_count": 35,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "h6Pp3gFMEN1j",
-        "outputId": "3a3d4699-9529-4e90-fb83-f6834b9b7d13"
-      },
-      "source": [
-        "LCP"
-      ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 1, 2, 3, 4])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fmHOTAQrJjuW",
-        "outputId": "23a48d3c-6c1c-46a0-8e18-189ead15f9f8"
-      },
-      "source": [
-        "print ('Sorted suffixes:')\n",
-        "for n in range(len(A)):\n",
-        "    print (A[SA[n]:])"
-      ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sorted suffixes:\n",
-            "$\n",
-            "C$\n",
-            "CC$\n",
-            "CCC$\n",
-            "CCCC$\n",
-            "CCCCC$\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aRiH8dklJmVl",
-        "outputId": "ce3d083e-e99f-4a1c-bd35-47eb4403acf8"
-      },
-      "source": [
-        "5*2 - "
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "byrJOWR8Jn4h"
+        "id": "p2gI96mgTGkV"
       },
       "source": [
         ""
