--- a/SciComp2021_HW1.ipynb
+++ b/SciComp2021_HW1.ipynb
@@ -60,10 +60,272 @@
         "### Problem 4 (2 points)\n",
         "Suppose that we want to distribute $N$ personal projects to $N$ students. Assume that each student $(k)_{k=0}^{N-1}$ has a list of his/her preferences for the projects, expressed as a vector $\\mathbf r_k$ of integer ranks assigned to each project. Ranks vary between 0 and $N-1$ without repetitions, the **lower** the rank the **more preferable** the project. (For example, the first student's ranks are $\\mathbf r_0 = [2,1,0]$, the second's $\\mathbf r_1 = [0,2,1]$ and the third $\\mathbf r_2 = [0,1,2]$). We want to distribute the projects so as to maximize the total preference, i.e., if $n_k$ denotes the project assigned to the $k$'th student, we want to make $f = \\sum_{k=0}^{N-1} \\mathbf r_k[n_k]$ as small as possible. (In the example above the optimal distribution is $n_0=2, n_1=0, n_2=1$, which gives $f=1$).  \n",
         "  * Come up with an algorithm optimizing the distribution and implement it in a Python or C/C++ program. The algorithm should accept the preference vectors and output a recommended distribution $(n_k)_{k=1}^N$. The algorithm need not find the best solution, but is expected to generally produce better solutions than would have been obtained by randomly distributing the projects. The algorithm should be reasonably fast, say run in not more than a few seconds for $N=30$. \n",
-        "  * Compare experimentally your algorithm with the trivial algorithm producing a random distribution. To this end, perform $M=1000$ experiments in each of which 1) random preference vectors for $N=30$ students and projects are generated; 2) the objective function $f$ is evaluated for both algorithms. After finishing all the experiments, plot the two respective distributions of the obtained $M$ values of $f$ and compute the mean values of $f$ for both algorithms. \n",
-        "  \n",
-        "### Problem 5 (2 points)\n",
-        "Suppose that we have developed an algorithm that is supposed to generate independent (quasi-)random numbers uniformly distributed in the interval $[0,1]$. To test our algorithm, we perform a series of experiments. In each experiment, we generate $N=10^3$ numbers $(x_n)_{n=1}^N$ with our algorithm, and compute the minimum distance $r=\\min_{1 \\le n < m\\le N}|x_n-x_m|$ between them. We observe that in more than 99% of such experiments we obtain $r < 10^{-5}$. Does this observation contradict the hypothesis of generating independent uniformly distributed random numbers? Explain your answer."
+        "  * Compare experimentally your algorithm with the trivial algorithm producing a random distribution. To this end, perform $M=1000$ experiments in each of which 1) random preference vectors for $N=30$ students and projects are generated; 2) the objective function $f$ is evaluated for both algorithms. After finishing all the experiments, plot the two respective distributions of the obtained $M$ values of $f$ and compute the mean values of $f$ for both algorithms. \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IrBIpdGR2kmT",
+        "outputId": "562eb244-ec09-49d0-f81a-1ec3738d1fe4"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "\n",
+        "N = int(input())\n",
+        "projects = [i for i in range(N)]\n",
+        "students = np.array([random.sample(projects, N) for i in range(N)])\n",
+        "students1 = students"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qF0lTnmb3p1j",
+        "outputId": "69491431-47a4-4d62-f925-41c1f4f7127d"
+      },
+      "source": [
+        "finalProj = {}\n",
+        "keysProj = [i for i in range(N)]\n",
+        "#valsProj = [i for i in range(N)]\n",
+        "keysStud = [i for i in range(N)]\n",
+        "#valsStud = [i for i in range(N)]\n",
+        "while len(students) > 0:\n",
+        "  sums = np.sum(students, axis = 0)\n",
+        "  worseProjs = np.where(sums == np.amax(sums))\n",
+        "  worseProj = random.sample(list(worseProjs[0]), 1)[0]\n",
+        "  bestStudents = np.where( students[:, worseProj] == np.min(students[:, worseProj]))\n",
+        "  bestStudent = random.sample(list(bestStudents[0]), 1)[0]\n",
+        "\n",
+        "\n",
+        "  keyBestStudent = np.where(keysStud == bestStudent)[0][0]\n",
+        "  keyWorstProj = np.where(keysProj== worseProj)[0][0]\n",
+        "  finalProj[keyBestStudent] = keyWorstProj\n",
+        "  print(keysStud[bestStudent],keysProj[worseProj] )\n",
+        "  students = np.delete(students, (bestStudent), axis=0)\n",
+        "  students = np.delete(students, (worseProj), axis=1)\n",
+        "  keysStud[bestStudent] *= -1\n",
+        "  keysProj[worseProj] *= -1 \n",
+        "  for i in range(bestStudent+1, N): \n",
+        "    if (keysStud[i]) > 0:\n",
+        "      keysStud[i] -= 1\n",
+        "  for i in range(worseProj+1, N): \n",
+        "    if (keysProj[i] > 0 ):\n",
+        "      keysProj[i] -= 1\n",
+        "\n",
+        "  sums = np.sum(students, axis = 1)\n",
+        "  worseStudents = np.where(sums == np.amax(sums))\n",
+        "  worseStudent = random.sample(list(worseStudents[0]), 1)[0]\n",
+        "  bestProjs = np.where( students[:, worseStudent] == np.min(students[:, worseStudent]))\n",
+        "  bestProj = random.sample(list(bestProjs[0]), 1)[0]\n",
+        "\n",
+        "  keyBestProj = np.where(keysProj == bestProj)[0][0]\n",
+        "  keyWorstStudent = np.where(keysStud== worseStudent)[0][0]\n",
+        "  finalProj[keyWorstStudent] = keyBestProj\n",
+        "  students = np.delete(students, (worseStudent), axis=0)\n",
+        "  students = np.delete(students, (bestProj), axis=1)\n",
+        "  print(keysStud[worseStudent],keysProj[bestProj] )\n",
+        "  keysStud[worseStudent] *= -1\n",
+        "  keysProj[bestProj] *= -1 \n",
+        "  for i in range(worseStudent+1, N): \n",
+        "    if (keysStud[i]) > 0:\n",
+        "      keysStud[i] -= 1\n",
+        "  for i in range(bestProj+1, N): \n",
+        "    if (keysProj[i] > 0 ):\n",
+        "      keysProj[i] -= 1"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 2\n",
+            "-2 1\n",
+            "1 -1\n",
+            "0 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oDdlLMtbJGQw",
+        "outputId": "e36dc143-8a78-4c14-c55f-8c918f330714"
+      },
+      "source": [
+        "len(students)"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0iJZ2_XVAfp6",
+        "outputId": "c33faa8c-1e04-4ca0-ee21-8230ab3e18bd"
+      },
+      "source": [
+        "students"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 4, 7, 3, 8, 2, 6],\n",
+              "       [0, 3, 9, 2, 6, 1, 8, 5],\n",
+              "       [9, 2, 0, 1, 8, 6, 5, 3],\n",
+              "       [3, 4, 6, 9, 8, 0, 2, 5],\n",
+              "       [6, 3, 9, 1, 2, 5, 7, 4],\n",
+              "       [0, 9, 7, 6, 1, 8, 3, 4],\n",
+              "       [7, 4, 0, 3, 5, 8, 2, 1],\n",
+              "       [0, 9, 8, 5, 7, 3, 2, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zMxdDGpYHWXT",
+        "outputId": "efe9549a-307b-4a84-a615-f90635eb5a27"
+      },
+      "source": [
+        "students1[-2,1]"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d0wbLiplHhwy",
+        "outputId": "ccbac728-d92a-4731-ab60-b8dd6286ebcf"
+      },
+      "source": [
+        "finalProj"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0: 0, 2: -2, 3: 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JdD7rCxPKso7",
+        "outputId": "927b9656-3807-49e3-a6bc-9a3e634b1acb"
+      },
+      "source": [
+        "keysProj"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, -1, 0, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6vlcxfXRLO8h",
+        "outputId": "84773d8b-5592-4b49-e1cb-00f9d0bcc686"
+      },
+      "source": [
+        "np.where(keysStud == bestStudent)[0][0]\n"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
       ]
     },
     {
@@ -103,7 +365,7 @@
       "source": [
         "!pip install mpi4py"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +400,7 @@
       "source": [
         "!mpirun --allow-run-as-root -n 7 python prog.py "
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +516,7 @@
         "if __name__ == '__main__':\n",
         "    main()          "
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,6 +537,9 @@
         "id": "-82lTa6O2KHz"
       },
       "source": [
+        "  \n",
+        "### Problem 5 (2 points)\n",
+        "Suppose that we have developed an algorithm that is supposed to generate independent (quasi-)random numbers uniformly distributed in the interval $[0,1]$. To test our algorithm, we perform a series of experiments. In each experiment, we generate $N=10^3$ numbers $(x_n)_{n=1}^N$ with our algorithm, and compute the minimum distance $r=\\min_{1 \\le n < m\\le N}|x_n-x_m|$ between them. We observe that in more than 99% of such experiments we obtain $r < 10^{-5}$. Does this observation contradict the hypothesis of generating independent uniformly distributed random numbers? Explain your answer.\n",
         "\n",
         "**Task 5**\n",
         "\n",
@@ -325,7 +590,7 @@
       "source": [
         "1 - (1-10**(-5))**(1000*1000)\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
